# spl-v2

./: Anchor.toml  package.json
helper/: metadata.helper.ts
helpers/: metadata.helper.ts
programs/spl-v2/: Cargo.toml
programs/spl-v2/src/: lib.rs
programs/spl-v2/src/instructions/: create_spl_v2.rs  mod.rs  swap_spl.rs  update_spl_v2_metadata.rs
programs/spl-v2/src/states/: mod.rs  spl_v2_config.rs
tests/: spl-v2.ts
